--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@luluff/mcp-server",
+  "name": "@luluf/mcp-server",
   "version": "1.0.8",
   "description": "Run your Go MCP server with a single npx command",
   "bin": {
